--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
 
     <string name="app_name">Home Automation Demo</string>
     <string name="title_device_detail">Device Detail</string>
+    <string name="title_nfc_activity">NFC Tag Scanned</string>
     <string name="communication_error">Oh noes!</string>
-
     <string name="binary_switch_on">On</string>
     <string name="binary_switch_off">Off</string>
+    <string name="nfc_text_default">NFC Tag Scanned</string>
 
 </resources>
